--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXfdnxJVTe5582LsbZBJ37",
+      "authorship_tag": "ABX9TyNBvHCGnrCwMbm+oZS3Qfsl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,8 +44,9 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # Binário ⇆ Decimal\n",
-        "def Convert_BxD(num, bin=False, dec=False):\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Binário ⇆ Decimal}}$\n",
+        "#@markdown > $\\color{gray}{\\text{convert_bxd}}$\n",
+        "def convert_bxd(num, bin=False, dec=False):\n",
         "    \n",
         "    def saida(v1, b1, v2, b2):\n",
         "        print(f'(\\033[1;32m{v1}\\033[){b1}', end='')\n",
@@ -105,25 +106,25 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": 35,
+      "execution_count": 133,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "CKA5oT9it4a9",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "68a95f23-f535-48e1-bcce-a4010e5b9b1b"
+        "cellView": "form",
+        "outputId": "ae9effcb-eeea-4615-d074-fa29ddaa3649"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
         "Numero_Binario =  10111#@param\n",
-        "Convert_BxD(Numero_Binario, bin=True)"
+        "convert_bxd(Numero_Binario, bin=True)"
       ],
-      "execution_count": 36,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,19 +138,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "yN69942r1Zds",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "99ec85f2-5d10-43b5-eea3-556fa96a530f"
+        "cellView": "form",
+        "outputId": "e3937c1c-365a-47bd-932a-cbf575369cbe"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
         "Numero_Decimal =  13.25#@param\n",
-        "Convert_BxD(Numero_Decimal, dec=True)"
+        "convert_bxd(Numero_Decimal, dec=True)"
       ],
-      "execution_count": 37,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,8 +177,8 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # Método de eliminação de Gauss ou Eliminação Gaussiana\n",
-        "#@markdown > $\\color{gray}{\\text{Gauss triângulação }}$\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Método de eliminação de Gauss ou Eliminação Gaussiana}}$\n",
+        "#@markdown > $\\color{gray}{\\text{eliminacao_gauss}}$\n",
         "\n",
         "def eliminacao_gauss(hea):\n",
         "    import numpy as np\n",
@@ -215,41 +216,78 @@
         "        arr = max_diagonal(arr)\n",
         "    return arr        "
       ],
-      "execution_count": 38,
+      "execution_count": 136,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "37rutuoUlahd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "id": "8ZSab6ZEJfKR",
+        "outputId": "407e588c-ff7b-4e65-e919-ed45323dcabd"
+      },
+      "source": [
+        "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "print(f'\\033[32m{eliminacao_gauss(Matriz_para_Triangular)}')"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[32m[[   2    1    1    1    1]\n",
+            " [   0   -3   -1   -1   -3]\n",
+            " [   0    0   -8   -2  -12]\n",
+            " [   0    0    0  -60 -120]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AiFmztPNJDwj"
+      },
+      "source": [
+        "<HR width=100% color=\"Turquoise\t\" align=left noshade>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4-hMYMpcl4S6",
         "cellView": "form"
       },
       "source": [
-        "m1 = [[1, 1, 1, 1], [4, 4, 2, 2], [2, 1, -1, 0]] #@param"
-      ],
-      "execution_count": 78,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "form",
-        "id": "4-hMYMpcl4S6"
-      },
-      "source": [
-        "#@markdown # Mostrando resultados de uma matriz triângular\n",
-        "def resultado(arr):\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Mostrando resultados de uma matriz triângular}}$\n",
+        "#@markdown > $\\color{gray}{\\text{resultado}}$\n",
+        "\n",
+        "def resultado(hea):\n",
         "    '''Entre apenas com uma matriz triangular inferior'''\n",
-        "    c, l = len(arr), len(arr[0])\n",
+        "    import numpy as np\n",
         "    \n",
-        "    for x in range(1, len(arr)+1):\n",
-        "        m1[len(m1)-x][len(m1)]/m1[len(m1)-1][len(m1)-x]\n",
+        "    arr = np.array(hea, copy=True); mt = []\n",
+        "    for x in reversed(range(len(arr))):\n",
+        "        n = 0; s = []\n",
+        "        for i, k in zip(range(x+1, len(arr)), range(1, len(arr))):\n",
+        "            s.append(arr[x][i])\n",
+        "            # print(s)\n",
+        "            # print(f'\\033[32m{k}\\033[')\n",
+        "            n += s[k-1]*mt[k-1]\n",
+        "            # print(n, s[k-1])\n",
         "\n",
-        "    msg = f'M\\u1D40 = {_}'\n",
+        "        # print(f'\\n\\033[34m{arr[x][len(arr)]}-\\033[33m{n}\\033[34m/{arr.diagonal()[x]}', end=' =')\n",
+        "        # print('\\033[32m', (arr[x][len(arr)]-n)/arr.diagonal()[x], '\\033[')\n",
+        "        mt.insert(0, (arr[x][len(arr)]-n)/arr.diagonal()[x])\n",
+        "    msg = f'\\n\\033[32mM\\u1D40 = {mt}'\n",
         "\n",
-        "    return msg "
+        "    return msg"
       ],
-      "execution_count": 79,
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -258,81 +296,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hh5SKoBpEY5-",
-        "outputId": "80fca404-462b-4cb3-ce62-63ea590dd313"
+        "id": "zeiJmNBSKGNB",
+        "outputId": "ddf82aba-9720-4431-a557-4606ee6aef61"
       },
       "source": [
-        "import numpy as np\n",
-        "\n",
-        "mm = np.array([[1, 2,  3,  4],[0, 5,  6,  7],[0, 0, 8, 9]])\n",
-        "for i, k in zip(range(len(mm)), mm):\n",
-        "    print(i, k)"
+        "Matriz_Resultados = Matriz_para_Triangular #@param\n",
+        "print(resultado(Matriz_Resultados))"
       ],
-      "execution_count": 191,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 [1 2 3 4]\n",
-            "1 [0 5 6 7]\n",
-            "2 [0 0 8 9]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CAC-Sxwa1PUh",
-        "outputId": "562ca89f-a063-465d-b99e-493786f196e0"
-      },
-      "source": [
-        "print(len(mm)-1, len(mm[0])-1)"
-      ],
-      "execution_count": 192,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2 3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3QjcV5fYk_va",
-        "outputId": "6df43c35-c875-485a-fcca-148354aa3da7"
-      },
-      "source": [
-        "mt = [mm[len(mm)-1][len(mm[0])-1]/mm.diagonal()[-1]]\n",
-        "for x in range(len(mm)-1, -1, -1):\n",
-        "    s = []; print(f\"\\033[35m{x}\\033[\")\n",
-        "    for i in range(x+1, len(mm)):        \n",
-        "        s.append(mm[x][i])\n",
-        "    print(s)"
-      ],
-      "execution_count": 193,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[35m2\u001b[\n",
-            "[]\n",
-            "\u001b[35m1\u001b[\n",
-            "[6]\n",
-            "\u001b[35m0\u001b[\n",
-            "[2, 3]\n"
+            "\n",
+            "\u001b[32mMᵀ = [-0.625, -0.25, 0.5, 2.0]\n"
           ]
         }
       ]
@@ -347,42 +325,20 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iNEaDHCmSh2P"
-      },
-      "source": [
-        "# Método de eliminação de Gauss jordan\n",
-        "\n",
-        "> $\\color{gray}{\\text{método do pivotamento parcial}}$\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HbrRZFO6TllS"
-      },
-      "source": [
-        "Exercício de texte:\n",
-        "\n",
-        "\\begin{bmatrix}\n",
-        "2&3&1&-1&6.9\\\\\n",
-        "-1&1&-4&1&-6.6\\\\\n",
-        "1&1&1&1&10.2\\\\\n",
-        "4&-5&1&-2&-12.3\n",
-        "\\end{bmatrix}"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "muuk30as4uZ7",
-        "outputId": "6da2576e-c4d1-4b56-a3c5-b1c6fbed4bbc"
+        "cellView": "form",
+        "outputId": "d2d68937-4d44-4dfb-89ac-e8d469910950"
       },
       "source": [
+        "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss Jordan}}$\n",
+        "#@markdown > $\\color{gray}{\\text{gauss_jordan}}$\n",
+        "\n",
+        "\n",
         "m2 = [[2, 3, 1, -1, 6.9],\n",
         "      [-1, 1, -4, 1, -6.6],\n",
         "      [1, 1, 1, 1, 10.2],\n",
@@ -426,7 +382,7 @@
         "\n",
         "print(gauss_jordan(m2))"
       ],
-      "execution_count": 46,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,8 +402,8 @@
         "id": "7jr4NM4XqDGO"
       },
       "source": [
-        "<HR width=100% color=\"Turquoise\t\" align=left noshade>\n",
-        "<p><h1><font color=\"Turquoise\">Contatos</font><h1></p>"
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>\n",
+        "# <p><h1><font color=\"Turquoise\">Contatos</font><h1></p>"
       ]
     },
     {
@@ -459,7 +415,7 @@
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "554eb080-a221-49ae-a580-42703457399f"
+        "outputId": "9f28e74e-af27-4e36-852f-16ed1e4a2216"
       },
       "source": [
         "#@title\n",
@@ -501,7 +457,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 47,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "display_data",
