--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNBvHCGnrCwMbm+oZS3Qfsl",
+      "authorship_tag": "ABX9TyMKVSNw8gY3IFmKPAFg8lhs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": 133,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -117,14 +117,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "ae9effcb-eeea-4615-d074-fa29ddaa3649"
+        "outputId": "9f526c29-6914-44fc-828a-3741b694f655"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
         "Numero_Binario =  10111#@param\n",
         "convert_bxd(Numero_Binario, bin=True)"
       ],
-      "execution_count": 134,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,14 +143,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "e3937c1c-365a-47bd-932a-cbf575369cbe"
+        "outputId": "fd741f84-fc9b-49cf-ff2e-73cae571696d"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
         "Numero_Decimal =  13.25#@param\n",
         "convert_bxd(Numero_Decimal, dec=True)"
       ],
-      "execution_count": 135,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "cellView": "form"
       },
       "source": [
-        "#@markdown # $\\color{Turquoise}{\\text{Método de eliminação de Gauss ou Eliminação Gaussiana}}$\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Método de eliminação gaussiana}}$\n",
         "#@markdown > $\\color{gray}{\\text{eliminacao_gauss}}$\n",
         "\n",
         "def eliminacao_gauss(hea):\n",
@@ -216,7 +216,7 @@
         "        arr = max_diagonal(arr)\n",
         "    return arr        "
       ],
-      "execution_count": 136,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -227,13 +227,15 @@
         },
         "cellView": "form",
         "id": "8ZSab6ZEJfKR",
-        "outputId": "407e588c-ff7b-4e65-e919-ed45323dcabd"
+        "outputId": "e9f6876c-3439-4ce9-9552-7655088eb2ce"
       },
       "source": [
         "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
-        "print(f'\\033[32m{eliminacao_gauss(Matriz_para_Triangular)}')"
+        "#@markdown > $\\color{gray}{\\text{Matriz_Triangulada}}$\n",
+        "Matriz_Triangulada = eliminacao_gauss(Matriz_para_Triangular)\n",
+        "print(f'\\033[32m{Matriz_Triangulada}')"
       ],
-      "execution_count": 137,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,19 +277,13 @@
         "        n = 0; s = []\n",
         "        for i, k in zip(range(x+1, len(arr)), range(1, len(arr))):\n",
         "            s.append(arr[x][i])\n",
-        "            # print(s)\n",
-        "            # print(f'\\033[32m{k}\\033[')\n",
         "            n += s[k-1]*mt[k-1]\n",
-        "            # print(n, s[k-1])\n",
         "\n",
-        "        # print(f'\\n\\033[34m{arr[x][len(arr)]}-\\033[33m{n}\\033[34m/{arr.diagonal()[x]}', end=' =')\n",
-        "        # print('\\033[32m', (arr[x][len(arr)]-n)/arr.diagonal()[x], '\\033[')\n",
         "        mt.insert(0, (arr[x][len(arr)]-n)/arr.diagonal()[x])\n",
-        "    msg = f'\\n\\033[32mM\\u1D40 = {mt}'\n",
         "\n",
-        "    return msg"
+        "    return mt"
       ],
-      "execution_count": 138,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -296,21 +292,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "cellView": "form",
         "id": "zeiJmNBSKGNB",
-        "outputId": "ddf82aba-9720-4431-a557-4606ee6aef61"
+        "outputId": "a89c84e2-8669-485b-c4f7-f69101862572"
       },
       "source": [
-        "Matriz_Resultados = Matriz_para_Triangular #@param\n",
-        "print(resultado(Matriz_Resultados))"
+        "Matriz_Resultados =  Matriz_Triangulada#@param\n",
+        "print(f'\\033[32mM\\u1D40 = {resultado(Matriz_Resultados)}')"
       ],
-      "execution_count": 139,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "\u001b[32mMᵀ = [-0.625, -0.25, 0.5, 2.0]\n"
+            "\u001b[32mMᵀ = [-1.0, -0.0, 1.0, 2.0]\n"
           ]
         }
       ]
@@ -327,24 +323,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "muuk30as4uZ7",
-        "cellView": "form",
-        "outputId": "d2d68937-4d44-4dfb-89ac-e8d469910950"
+        "cellView": "form"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Método de Gauss Jordan}}$\n",
         "#@markdown > $\\color{gray}{\\text{gauss_jordan}}$\n",
         "\n",
-        "\n",
-        "m2 = [[2, 3, 1, -1, 6.9],\n",
-        "      [-1, 1, -4, 1, -6.6],\n",
-        "      [1, 1, 1, 1, 10.2],\n",
-        "      [4, -5, 1, -2, -12.3]]\n",
-        "\n",
         "def gauss_jordan(hea):\n",
+        "\n",
+        "    import numpy as np\n",
+        "    \n",
+        "    arr = np.array(hea, copy=True)\n",
+        "\n",
+        "    for _ in range(2): \n",
+        "        bl = []\n",
+        "        for i, k in zip(arr, range(len(arr))):\n",
+        "            if not k-1 < 0:\n",
+        "                bl.append([i[x] for x in range(k)])\n",
+        "        bl = np.hstack(bl)\n",
+        "\n",
+        "        if len(np.where(bl > 0)[0]) != 0:\n",
+        "            arr = eliminacao_gauss(arr)\n",
+        "        else:\n",
+        "            break\n",
+        "\n",
+        "    '''\n",
         "    import numpy as np\n",
         "    \n",
         "    arr = np.array(hea, copy=True)\n",
@@ -379,22 +383,78 @@
         "\n",
         "        arr = max_diagonal(arr)\n",
         "    return arr\n",
-        "\n",
-        "print(gauss_jordan(m2))"
+        "print(gauss_jordan(m2))\n",
+        "    '''"
       ],
-      "execution_count": 140,
+      "execution_count": 218,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oD5DwgUj4zrq",
+        "cellView": "form"
+      },
+      "source": [
+        "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "#@markdown > $\\color{gray}{\\text{arr}}$\n",
+        "arr = eliminacao_gauss(Matriz_para_Triangular)\n",
+        "print(f'\\033[32m{arr}')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ldhc05ox5lSJ",
+        "outputId": "2ea9754a-3da0-4165-dab9-78d5110bfc8b"
+      },
+      "source": [
+        "import numpy as np\n",
+        "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]]\n",
+        "arr = np.array(matriz)\n",
+        "\n",
+        "for _ in range(2): \n",
+        "    bl = []\n",
+        "    for i, k in zip(arr, range(len(arr))):\n",
+        "        if not k-1 < 0:\n",
+        "            bl.append([i[x] for x in range(k)])\n",
+        "    bl = np.hstack(bl)\n",
+        "\n",
+        "    if len(np.where(bl > 0)[0]) != 0:\n",
+        "        arr = eliminacao_gauss(arr)\n",
+        "    else:\n",
+        "        break\n",
+        "print(f'\\033[32m{arr}\\033[')"
+      ],
+      "execution_count": 226,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 4.000000e+00 -5.000000e+00  1.000000e+00 -2.000000e+00 -1.230000e+01]\n",
-            " [ 0.000000e+00 -2.200000e+01 -2.000000e+00  0.000000e+00 -5.220000e+01]\n",
-            " [ 0.000000e+00  0.000000e+00  3.280000e+02 -4.400000e+01  7.992000e+02]\n",
-            " [-0.000000e+00 -0.000000e+00  0.000000e+00  4.540800e+04  1.907136e+05]]\n"
+            "\u001b[32m[[   2    1    1    1    1]\n",
+            " [   0   -3   -1   -1   -3]\n",
+            " [   0    0   -8   -2  -12]\n",
+            " [   0    0    0  -60 -120]]\u001b[\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XBwFALCMoGTx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -402,8 +462,7 @@
         "id": "7jr4NM4XqDGO"
       },
       "source": [
-        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>\n",
-        "# <p><h1><font color=\"Turquoise\">Contatos</font><h1></p>"
+        "# <HR width=100% color=\"Turquoise\t\" align=left noshade>"
       ]
     },
     {
@@ -415,10 +474,10 @@
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "9f28e74e-af27-4e36-852f-16ed1e4a2216"
+        "outputId": "d622f1db-96cd-4ce6-d401-1b0c81747745"
       },
       "source": [
-        "#@title\n",
+        "#@markdown # $\\color{Turquoise}{\\text{Contatos}}$\n",
         "%%html\n",
         "\n",
         "<table style=\"white-space: nowrap; width: 0px;\" border=\"0\" cellspacing=\"0\">\n",
@@ -457,7 +516,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 141,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
