--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMKVSNw8gY3IFmKPAFg8lhs",
+      "authorship_tag": "ABX9TyO9MaXqVquLLaaKGeCWCUhC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -474,7 +474,7 @@
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "d622f1db-96cd-4ce6-d401-1b0c81747745"
+        "outputId": "7b880022-7670-4899-d9b8-6b7d07da2692"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Contatos}}$\n",
@@ -509,14 +509,14 @@
         "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://www.passeidireto.com/perfil/371127-klebson-marques/\">\n",
         "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://img.utdstc.com/icon/f63/09d/f6309d71c42e9f12c4aaf4800260f4c2ae9637ab4b148c381e8378e80ccce0e6:200\" />\n",
         "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://github.com/kleber293\">\n",
-        "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://toppng.com/uploads/preview/octocat-filled-icon-github-icon-svg-11553443886f4krecogcv.png\" /></a>\n",
+        "            <img style=\"white-space: nowrap; width: 26px; height: 20px; object-fit: cover;\" src=\"http://pngimg.com/uploads/github/github_PNG69.png\" /></a>\n",
         "        </div>\n",
         "      </td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 27,
+      "execution_count": 282,
       "outputs": [
         {
           "output_type": "display_data",
@@ -552,7 +552,7 @@
               "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://www.passeidireto.com/perfil/371127-klebson-marques/\">\n",
               "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://img.utdstc.com/icon/f63/09d/f6309d71c42e9f12c4aaf4800260f4c2ae9637ab4b148c381e8378e80ccce0e6:200\" />\n",
               "          </a> <a style=\"white-space: nowrap; display: inline-block;\" href=\"https://github.com/kleber293\">\n",
-              "            <img style=\"white-space: nowrap; width: 20px; height: 20px;\" src=\"https://toppng.com/uploads/preview/octocat-filled-icon-github-icon-svg-11553443886f4krecogcv.png\" /></a>\n",
+              "            <img style=\"white-space: nowrap; width: 26px; height: 20px; object-fit: cover;\" src=\"http://pngimg.com/uploads/github/github_PNG69.png\" /></a>\n",
               "        </div>\n",
               "      </td>\n",
               "    </tr>\n",
