--- a/Calculo_Numerico.ipynb
+++ b/Calculo_Numerico.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculo_Numerico.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9MaXqVquLLaaKGeCWCUhC",
+      "authorship_tag": "ABX9TyMu2REbfzzKZtdxfk9IOvNb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
         "        else:\n",
         "            saida(conf,'\\u2081\\u2080', dec_inteiro(num), '\\u2082')"
       ],
-      "execution_count": 15,
+      "execution_count": 545,
       "outputs": []
     },
     {
@@ -117,14 +117,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "9f526c29-6914-44fc-828a-3741b694f655"
+        "outputId": "bef9571e-180a-4b14-d6f9-cfc17f221b79"
       },
       "source": [
         "#@markdown ### Convertendo um número **Binário** em **Decimal**\n",
         "Numero_Binario =  10111#@param\n",
         "convert_bxd(Numero_Binario, bin=True)"
       ],
-      "execution_count": 16,
+      "execution_count": 546,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,14 +143,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form",
-        "outputId": "fd741f84-fc9b-49cf-ff2e-73cae571696d"
+        "outputId": "95da2adb-6921-49ad-be1b-038e7beeebd8"
       },
       "source": [
         "#@markdown ### Convertendo um número **Decimal** em **Binário**\n",
         "Numero_Decimal =  13.25#@param\n",
         "convert_bxd(Numero_Decimal, dec=True)"
       ],
-      "execution_count": 17,
+      "execution_count": 547,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,19 +204,16 @@
         "    arr = max_diagonal(arr)\n",
         "\n",
         "    for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
-        "        for l in range(len(arr)-1-cm): # linha\n",
+        "        for l, k in zip(range(cm, len(arr)-1), range(len(arr))): # linha\n",
         "            for c in range(len(arr[0])): # coluna da linha\n",
         "                if not c:\n",
-        "                    v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
-        "\n",
-        "                ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
-        "\n",
-        "                arr[l+cm+1][c] = ms\n",
-        "\n",
+        "                    v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
+        "                arr[cm+k+1][c] = v1*arr[cm+k+1][c]-v2*arr[cm][c]\n",
         "        arr = max_diagonal(arr)\n",
+        "\n",
         "    return arr        "
       ],
-      "execution_count": 18,
+      "execution_count": 574,
       "outputs": []
     },
     {
@@ -227,7 +224,7 @@
         },
         "cellView": "form",
         "id": "8ZSab6ZEJfKR",
-        "outputId": "e9f6876c-3439-4ce9-9552-7655088eb2ce"
+        "outputId": "8dc7b53b-3b17-43ce-f109-68a8e7d8ff3f"
       },
       "source": [
         "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
@@ -235,16 +232,16 @@
         "Matriz_Triangulada = eliminacao_gauss(Matriz_para_Triangular)\n",
         "print(f'\\033[32m{Matriz_Triangulada}')"
       ],
-      "execution_count": 19,
+      "execution_count": 575,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32m[[   2    1    1    1    1]\n",
-            " [   0   -3   -1   -1   -3]\n",
-            " [   0    0   -8   -2  -12]\n",
-            " [   0    0    0  -60 -120]]\n"
+            "\u001b[32m[[  2   1   1   1   1]\n",
+            " [  0   3   1   1   3]\n",
+            " [  0   0   8   2  12]\n",
+            " [  0   0   0  60 120]]\n"
           ]
         }
       ]
@@ -283,7 +280,7 @@
         "\n",
         "    return mt"
       ],
-      "execution_count": 20,
+      "execution_count": 577,
       "outputs": []
     },
     {
@@ -294,13 +291,13 @@
         },
         "cellView": "form",
         "id": "zeiJmNBSKGNB",
-        "outputId": "a89c84e2-8669-485b-c4f7-f69101862572"
+        "outputId": "8654e71d-fad6-4eff-b3cf-b4c572291532"
       },
       "source": [
         "Matriz_Resultados =  Matriz_Triangulada#@param\n",
         "print(f'\\033[32mM\\u1D40 = {resultado(Matriz_Resultados)}')"
       ],
-      "execution_count": 21,
+      "execution_count": 551,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,22 +383,7 @@
         "print(gauss_jordan(m2))\n",
         "    '''"
       ],
-      "execution_count": 218,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oD5DwgUj4zrq",
-        "cellView": "form"
-      },
-      "source": [
-        "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
-        "#@markdown > $\\color{gray}{\\text{arr}}$\n",
-        "arr = eliminacao_gauss(Matriz_para_Triangular)\n",
-        "print(f'\\033[32m{arr}')"
-      ],
-      "execution_count": null,
+      "execution_count": 552,
       "outputs": []
     },
     {
@@ -410,8 +392,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "oD5DwgUj4zrq",
+        "cellView": "form",
+        "outputId": "5e7ed693-45cd-4250-c10d-fc085fca3f13"
+      },
+      "source": [
+        "Matriz_para_Triangular = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]] #@param\n",
+        "#@markdown > $\\color{gray}{\\text{arr}}$\n",
+        "arr = eliminacao_gauss(Matriz_para_Triangular)\n",
+        "print(f'\\033[32m{arr}')"
+      ],
+      "execution_count": 579,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[32m[[  2   1   1   1   1]\n",
+            " [  0   3   1   1   3]\n",
+            " [  0   0   8   2  12]\n",
+            " [  0   0   0  60 120]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "ldhc05ox5lSJ",
-        "outputId": "2ea9754a-3da0-4165-dab9-78d5110bfc8b"
+        "outputId": "3dd919c2-44ed-4c90-95d1-70fb244ace6a"
       },
       "source": [
         "import numpy as np\n",
@@ -431,16 +443,16 @@
         "        break\n",
         "print(f'\\033[32m{arr}\\033[')"
       ],
-      "execution_count": 226,
+      "execution_count": 578,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[32m[[   2    1    1    1    1]\n",
-            " [   0   -3   -1   -1   -3]\n",
-            " [   0    0   -8   -2  -12]\n",
-            " [   0    0    0  -60 -120]]\u001b[\n"
+            "\u001b[32m[[  2   1   1   1   1]\n",
+            " [  0   3   1   1   3]\n",
+            " [  0   0   8   2  12]\n",
+            " [  0   0   0  60 120]]\u001b[\n"
           ]
         }
       ]
@@ -451,10 +463,112 @@
         "id": "XBwFALCMoGTx"
       },
       "source": [
-        ""
+        "def max_diagonal(arr):\n",
+        "    \n",
+        "    def permutation(arr, shift, end):\n",
+        "        arr = np.insert(arr, end, arr[shift], axis=0)\n",
+        "        finale = shift + 1 if shift > end else shift \n",
+        "        arr = np.delete(arr, finale, axis=0)\n",
+        "        return arr \n",
+        "\n",
+        "    for i in range(len(arr)):\n",
+        "        arr = permutation(\n",
+        "            arr,\n",
+        "            np.where(arr[i:, i] == max(arr[i:, i], key=abs))[0][0] + i,\n",
+        "            i\n",
+        "        )\n",
+        "    return arr\n",
+        "\n",
+        "arr = max_diagonal(arr)\n",
+        "\n",
+        "for cm in reversed(range(len(arr[0])-2)): # coluna da linha da matriz\n",
+        "    for l in reversed(range(len(arr)-1-cm)): # linha\n",
+        "        for c in reversed(range(len(arr[0]))): # coluna da linha\n",
+        "            if not c:\n",
+        "                v1, v2 = arr[cm][cm], arr[l+cm+1][cm]\n",
+        "            print(v1, v2)\n",
+        "        print()\n",
+        "            # ms = v2*arr[cm][c] - v1*arr[l+cm+1][c]\n",
+        "            # arr[l+cm+1][c] = ms\n",
+        "    print()\n",
+        "    arr = max_diagonal(arr)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ToU4pVdgcUKL"
+      },
+      "source": [
+        "import numpy as np\n",
+        "matriz = [[2, 1, 1, 1, 1], [1, 2, 1, 1, 2], [1, 1, 2, 1, 3], [1, 1, 1, 2, 4]]\n",
+        "arr = np.array(matriz)"
+      ],
+      "execution_count": 570,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YUXZu7mcXFVz"
+      },
+      "source": [
+        "for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
+        "    for l, k in zip(range(cm, len(arr)-1), range(len(arr))): # linha\n",
+        "        for c in range(len(arr[0])): # coluna da linha\n",
+        "            if not c:\n",
+        "                v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
+        "            \n",
+        "            print(f'{arr[cm+k+1][c]}', end=' = ')\n",
+        "            print(f'{v1} * {arr[cm+k+1][c]} - {v2} * {arr[cm][c]}', end=' = ')\n",
+        "            print(v1*arr[cm+k+1][c]-v2*arr[cm][c], end='     ')\n",
+        "            print(cm, l, k, c)\n",
+        "            arr[cm+k+1][c] = v1*arr[cm+k+1][c]-v2*arr[cm][c]\n",
+        "        print()\n",
+        "        print(arr)\n",
+        "        print()\n",
+        "    print('\\033[31m-'*25,'\\033[\\n')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b_1FmaMuwEWZ",
+        "outputId": "7c2e21fb-c34b-452d-b68d-aa323bf3ecb5"
+      },
+      "source": [
+        "for cm in range(len(arr[0])-2): # coluna da linha da matriz\n",
+        "    for l, k in zip(range(cm, len(arr)-1), range(len(arr))): # linha\n",
+        "        for c in range(len(arr[0])): # coluna da linha\n",
+        "            if not c:\n",
+        "                v1, v2 = arr[cm][cm], arr[cm+k+1][cm]\n",
+        "            arr[cm+k+1][c] = v1*arr[cm+k+1][c]-v2*arr[cm][c]\n",
+        "    arr = max_diagonal(arr)\n",
+        "arr"
+      ],
+      "execution_count": 571,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  2,   1,   1,   1,   1],\n",
+              "       [  0,   3,   1,   1,   3],\n",
+              "       [  0,   0,   8,   2,  12],\n",
+              "       [  0,   0,   0,  60, 120]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 571
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -474,7 +588,7 @@
         },
         "id": "-BSy6gbmqMQG",
         "cellView": "form",
-        "outputId": "7b880022-7670-4899-d9b8-6b7d07da2692"
+        "outputId": "4add065a-5a7c-48be-a197-034ec6ccb53e"
       },
       "source": [
         "#@markdown # $\\color{Turquoise}{\\text{Contatos}}$\n",
@@ -516,7 +630,7 @@
         "  </tbody>\n",
         "</table>"
       ],
-      "execution_count": 282,
+      "execution_count": 559,
       "outputs": [
         {
           "output_type": "display_data",
